--- a/besu/Dockerfile.binary
+++ b/besu/Dockerfile.binary
@@ -6,10 +6,12 @@ FROM hyperledger/besu:${DOCKER_TAG}
 ARG BUILD_TARGET
 
 ARG UID=10001
+# GID 10002 is deliberate so it can exchange secret with CL
+ARG GID=10002
 
 USER root
 
-RUN groupmod -g "${UID}" besu && usermod -u "${UID}" -g "${UID}" besu
+RUN groupmod -g "${GID}" besu && usermod -u "${UID}" -g "${GID}" besu
 
 RUN set -eux; \
         apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y gosu ca-certificates tzdata; \
