--- a/besu/Dockerfile.source
+++ b/besu/Dockerfile.source
@@ -1,5 +1,5 @@
 # Build Besu in a stock Ubuntu container
-FROM eclipse-temurin:17-jdk-focal as builder
+FROM eclipse-temurin:11-jdk-focal as builder
 
 # This is here to avoid build-time complaints
 ARG DOCKER_TAG
@@ -16,12 +16,19 @@ FROM eclipse-temurin:17-jre-focal
 
 ARG USER=besu
 ARG UID=10001
+# GID 10002 is deliberate so it can exchange secret with CL
+ARG GID=10002
 
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y --no-install-recommends \
   ca-certificates \
   tzdata \
+  gosu \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
+
+RUN addgroup \
+    --gid "${GID}" \
+    "${USER}"
 
 # See https://stackoverflow.com/a/55757473/12429735RUN
 RUN adduser \
@@ -31,6 +38,7 @@ RUN adduser \
     --shell "/usr/sbin/nologin" \
     --no-create-home \
     --uid "${UID}" \
+    --ingroup "${USER}" \
     "${USER}"
 
 RUN mkdir -p /var/lib/besu/secrets && chown -R besu:besu /var/lib/besu && chmod -R 700 /var/lib/besu && chmod 755 /var/lib/besu/secrets
