--- a/lighthouse/Dockerfile.source
+++ b/lighthouse/Dockerfile.source
@@ -43,7 +43,7 @@ RUN adduser \
     "${USER}"
 
 # Create data mount point with permissions
-RUN mkdir -p /var/lib/lighthouse/beacon && chown ${USER}:${USER} /var/lib/lighthouse/beacon && chmod 700 /var/lib/lighthouse/beacon
+RUN mkdir -p /var/lib/lighthouse/beacon/secrets && chown -R ${USER}:${USER} /var/lib/lighthouse/beacon && chmod -R 700 /var/lib/lighthouse/beacon && chmod 755 /var/lib/lighthouse/beacon/secrets
 COPY ./docker-entrypoint.sh /usr/local/bin/
 
 ARG USER=lhvalidator
