--- a/default.env
+++ b/default.env
@@ -3,7 +3,7 @@ COMPOSE_FILE=teku-base.yml:besu.yml
 # Set the ETH address that priority fees and MEV rewards should be sent to
 REWARDS_TO=
 # Override TTD - may be required during testnet launch. This value is for Ropsten
-# Expect this parameter to be removed again after all testnets have been launched
+# If left empty, the client's built-in TTD is used
 OVERRIDE_TTD=100000000000000000000000
 # Authenticated execution client endpoint. This default uses the execution node container.
 # This needs to be ws:// or ws:// if using Nimbus, e.g. ws://execution:8551
