--- a/lh-base.yml
+++ b/lh-base.yml
@@ -26,6 +26,7 @@ services:
     environment:
       - RAPID_SYNC_URL=${RAPID_SYNC_URL}
       - JWT_SECRET=${JWT_SECRET}
+      - OVERRIDE_TTD=${OVERRIDE_TTD}
     ports:
       - ${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/tcp
       - ${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/udp
@@ -67,7 +68,6 @@ services:
       - --metrics-port
       - "8008"
       - --validator-monitor-auto
-      - --terminal-total-difficulty-override=${OVERRIDE_TTD}
   validator:
     restart: "${RESTART}"
     image: lighthouse:local
