Add Erigon Ropsten support

--- a/default.env
+++ b/default.env
@@ -66,6 +66,8 @@ TRAEFIK_WEB_HTTP_PORT=80
 EL_RPC_PORT=8545
 # Execution client WS port, used with Nimbus. Ditto insecure, do not expose to Internet.
 EL_WS_PORT=8546
+# Erigon's torrent port. Don't make this 42070, that'll fail
+ERIGON_TORRENT_PORT=42069
 # SSV Node ports - note these conflict with Prysm by default
 SSV_P2P_PORT=13000
 SSV_P2P_PORT_UDP=12000
@@ -120,7 +122,7 @@ LS_DOCKERFILE=Dockerfile.binary
 
 # Erigon
 ERIGON_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-ERIGON_DOCKER_TAG=stable
+ERIGON_DOCKER_TAG=alpha
 ERIGON_DOCKERFILE=Dockerfile.binary
 
 #Akula
