--- a/nethermind/Dockerfile.binary
+++ b/nethermind/Dockerfile.binary
@@ -7,6 +7,12 @@ ARG BUILD_TARGET
 
 ARG USER=nethermind
 ARG UID=10001
+# GID 10002 is deliberate so it can exchange secret with CL
+ARG GID=10002
+
+RUN addgroup \
+    --gid "${GID}" \
+    "${USER}"
 
 # See https://stackoverflow.com/a/55757473/12429735RUN
 RUN adduser \
@@ -16,16 +22,19 @@ RUN adduser \
     --shell "/sbin/nologin" \
     --no-create-home \
     --uid "${UID}" \
+    --ingroup "${USER}" \
     "${USER}"
 
 RUN set -eux; \
 	apt-get update; \
-	apt-get install -y ca-certificates; \
-	rm -rf /var/lib/apt/lists/*
+	DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y ca-certificates gosu tzdata; \
+	rm -rf /var/lib/apt/lists/*; \
+# verify that the binary works
+        gosu nobody true
 
 RUN chown -R ${USER}:${USER} /nethermind
-RUN mkdir -p /var/lib/nethermind && chown ${USER}:${USER} /var/lib/nethermind
-
+RUN mkdir -p /var/lib/nethermind/secrets && chown -R ${USER}:${USER} /var/lib/nethermind && chmod -R 700 /var/lib/nethermind && chmod 755 /var/lib/nethermind/secrets
+COPY ./docker-entrypoint.sh /usr/local/bin/
 
 USER ${USER}
 
