--- a/nethermind/Dockerfile.source
+++ b/nethermind/Dockerfile.source
@@ -13,10 +13,16 @@ RUN bash -c "git clone https://github.com/NethermindEth/nethermind && cd netherm
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0
 
-RUN apt-get update && apt-get -y install libsnappy-dev libc6-dev libc6 ca-certificates && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install libsnappy-dev libc6-dev libc6 ca-certificates gosu tzdata && rm -rf /var/lib/apt/lists/*
 
 ARG USER=nethermind
 ARG UID=10001
+# GID 10002 is deliberate so it can exchange secret with CL
+ARG GID=10002
+
+RUN addgroup \
+    --gid "${GID}" \
+    "${USER}"
 
 RUN adduser \
     --disabled-password \
@@ -24,6 +30,7 @@ RUN adduser \
     --shell "/sbin/nologin" \
     --no-create-home \
     --uid "${UID}" \
+    --ingroup "${USER}" \
     "${USER}"
 
 WORKDIR /nethermind
@@ -31,7 +38,8 @@ WORKDIR /nethermind
 COPY --from=build /nethermind/out .
 
 RUN chown -R ${USER}:${USER} /nethermind
-RUN mkdir -p /var/lib/nethermind && chown ${USER}:${USER} /var/lib/nethermind
+RUN mkdir -p /var/lib/nethermind/secrets && chown -R ${USER}:${USER} /var/lib/nethermind && chmod -R 700 /var/lib/nethermind && chmod 755 /var/lib/nethermind/secrets
+COPY ./docker-entrypoint.sh /usr/local/bin/
 
 USER ${USER}
 
