Add lodestar ropsten merge support

--- a/default.env
+++ b/default.env
@@ -117,7 +117,7 @@ PRYSM_DOCKERFILE=Dockerfile.binary
 
 # Lodestar
 LS_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-LS_DOCKER_TAG=latest
+LS_DOCKER_TAG=next
 LS_DOCKERFILE=Dockerfile.binary
 
 # Erigon
