--- a/lodestar/Dockerfile.source
+++ b/lodestar/Dockerfile.source
@@ -21,7 +21,7 @@ COPY --from=build /usr/app/lodestar/node_modules ./node_modules/
 COPY --from=build /usr/app/lodestar/packages ./packages
 
 
-# Scripts 
+# Scripts
 COPY ./validator-import.sh /usr/local/bin/
 COPY ./docker-entrypoint.sh /usr/local/bin/
 
@@ -38,7 +38,7 @@ RUN adduser \
     --uid "${UID}" \
     "${USER}"
 
-RUN mkdir -p /var/lib/lodestar/consensus && chown ${USER}:${USER} /var/lib/lodestar/consensus && chmod 700 /var/lib/lodestar/consensus
+RUN mkdir -p /var/lib/lodestar/consensus/secrets && chown -R ${USER}:${USER} /var/lib/lodestar/consensus && chmod -R 700 /var/lib/lodestar/consensus && chmod 750 /var/lib/lodestar/consensus/secrets
 
 ARG USER=lsvalidator
 ARG UID=10000
