--- a/default.env
+++ b/default.env
@@ -112,7 +112,7 @@ LH_DOCKERFILE=Dockerfile.binary
 
 # Prysm
 PRYSM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-PRYSM_DOCKER_TAG=stable
+PRYSM_DOCKER_TAG=latest
 PRYSM_DOCKERFILE=Dockerfile.binary
 
 # Lodestar
