--- a/lodestar/Dockerfile.binary
+++ b/lodestar/Dockerfile.binary
@@ -23,7 +23,7 @@ RUN adduser \
     --uid "${UID}" \
     "${USER}"
 
-RUN mkdir -p /var/lib/lodestar/consensus/secrets && chown -R ${USER}:${USER} /var/lib/lodestar/consensus && chmod -R 700 /var/lib/lodestar/consensus && chmod 750 /var/lib/lodestar/consensus/secrets
+RUN mkdir -p /var/lib/lodestar/consensus/secrets && chown -R ${USER}:${USER} /var/lib/lodestar && chmod -R 700 /var/lib/lodestar && chmod 750 /var/lib/lodestar/consensus/secrets
 
 ARG USER=lsvalidator
 ARG UID=10000
@@ -39,7 +39,7 @@ RUN adduser \
     "${USER}"
 
 # Create data mount point with permissions
-RUN mkdir -p /var/lib/lodestar/validators && chown ${USER}:${USER} /var/lib/lodestar/validators && chmod 700 /var/lib/lodestar/validators
+RUN mkdir -p /var/lib/lodestar/validators && chown -R ${USER}:${USER} /var/lib/lodestar/validators && chmod 700 /var/lib/lodestar/validators
 COPY ./docker-entrypoint.sh /usr/local/bin/
 
 ENTRYPOINT ["node", "--max-old-space-size=6144", "/usr/app/node_modules/.bin/lodestar"]
