--- a/nethermind/Dockerfile.source
+++ b/nethermind/Dockerfile.source
@@ -11,6 +11,8 @@ RUN apt-get update -y && apt-get install -y git
 RUN bash -c "git clone https://github.com/NethermindEth/nethermind && cd nethermind && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET} && git submodule update --init src/Dirichlet src/int256 src/rocksdb-sharp src/Math.Gmp.Native && \
     dotnet publish src/Nethermind/Nethermind.Runner -c release -o out"
 
+FROM ghcr.io/tomwright/dasel:latest as dasel
+
 FROM mcr.microsoft.com/dotnet/aspnet:6.0
 
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install libsnappy-dev libc6-dev libc6 ca-certificates gosu tzdata && rm -rf /var/lib/apt/lists/*
@@ -39,6 +41,8 @@ COPY --from=build /nethermind/out .
 
 RUN chown -R ${USER}:${USER} /nethermind
 RUN mkdir -p /var/lib/nethermind/secrets && chown -R ${USER}:${USER} /var/lib/nethermind && chmod -R 700 /var/lib/nethermind && chmod 750 /var/lib/nethermind/secrets
+
+COPY --from=dasel /usr/local/bin/dasel /usr/local/bin/
 COPY ./docker-entrypoint.sh /usr/local/bin/
 
 USER ${USER}
