--- a/prysm/Dockerfile.binary
+++ b/prysm/Dockerfile.binary
@@ -32,7 +32,7 @@ RUN adduser \
     "${USER}"
 
 # Create data mount point with permissions
-RUN mkdir -p /var/lib/prysm && chown ${USER}:${USER} /var/lib/prysm && chmod 700 /var/lib/prysm
+RUN mkdir -p /var/lib/prysm/secrets && chown -R ${USER}:${USER} /var/lib/prysm && chmod -R 700 /var/lib/prysm && chmod 750 /var/lib/prysm/secrets
 
 COPY --from=ccsource /app/cmd/beacon-chain/beacon-chain /usr/local/bin/
 COPY ./docker-entrypoint.sh /usr/local/bin/
