Add deposit-cli.yml by default when on a testnet

--- a/default.env
+++ b/default.env
@@ -1,5 +1,5 @@
 # Client choice: See https://eth-docker.net/docs/Usage/ClientSetup for available options
-COMPOSE_FILE=teku-base.yml:besu.yml
+COMPOSE_FILE=teku-base.yml:besu.yml:deposit-cli.yml
 # Set the ETH address that priority fees and MEV rewards should be sent to
 REWARDS_TO=
 # Override TTD - may be required during testnet launch. This value is for Ropsten
