--- a/nethermind/Dockerfile.binary
+++ b/nethermind/Dockerfile.binary
@@ -1,5 +1,7 @@
 ARG DOCKER_TAG
 
+FROM ghcr.io/tomwright/dasel:latest as dasel
+
 FROM nethermind/nethermind:${DOCKER_TAG}
 
 # Unused, this is here to avoid build time complaints
@@ -20,12 +22,17 @@ RUN adduser \
 
 RUN set -eux; \
 	apt-get update; \
-	apt-get install -y ca-certificates; \
-	rm -rf /var/lib/apt/lists/*
+	DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y ca-certificates gosu tzdata; \
+	rm -rf /var/lib/apt/lists/*; \
+# verify that the binary works
+        gosu nobody true
 
+# This only goes so far. keystore, logs and nethermind_db are volumes and need to be chown'd in the entrypoint
 RUN chown -R ${USER}:${USER} /nethermind
-RUN mkdir -p /var/lib/nethermind && chown ${USER}:${USER} /var/lib/nethermind
+RUN mkdir -p /var/lib/nethermind && chown -R ${USER}:${USER} /var/lib/nethermind
 
+COPY --from=dasel /usr/local/bin/dasel /usr/local/bin/
+COPY ./docker-entrypoint.sh /usr/local/bin/
 
 USER ${USER}
 
