Change default Teku peers to 100

--- a/default.env
+++ b/default.env
@@ -1,5 +1,5 @@
 # Client choice: See https://eth-docker.net/docs/Usage/ClientSetup for available options
-COMPOSE_FILE=teku-base.yml:geth.yml
+COMPOSE_FILE=teku-base.yml:besu.yml
 # Set the ETH address that priority fees and MEV rewards should be sent to
 REWARDS_TO=
 # Execution client endpoint / chain source. This default uses the execution node container.
@@ -15,12 +15,10 @@ GRAFFITI=eth-docker
 NETWORK=prater
 # Network to use for execution client. If using main net, set to mainnet.
 EL_NETWORK=goerli
-# Some clients suggest adjusting to higher (or lower) peer count. Adjust here, per client
-PRYSM_PEER_COUNT=45
-LH_PEER_COUNT=80
-TEKU_PEER_COUNT=74
-# Nimbus peer count should not be set below 70
-NIM_PEER_COUNT=160
+# CLrapid sync via initial state/checkpoint. Please create an Infura eth2/beacon project first, then replace the {projectid} and {secret} here
+# Alternatively, use an already synced CL that you trust
+#RAPID_SYNC_URL=https://{projectid}:{secret}@eth2-beacon-${NETWORK}.infura.io/
+RAPID_SYNC_URL=
 
 # Secure web proxy - advanced use, please see instructions
 DOMAIN=example.com
@@ -37,14 +35,13 @@ EL_WS_HOST=elws
 DDNS_SUBDOMAIN=
 DDNS_PROXY=true
 
-# CLrapid sync via initial state/checkpoint. Please create an Infura eth2/beacon project first, then replace the {projectid} and {secret} here
-# Alternatively, use an already synced CL that you trust
-#RAPID_SYNC_URL=https://{projectid}:{secret}@eth2-beacon-${NETWORK}.infura.io/
-RAPID_SYNC_URL=
-
-# Consensus client address. This could be comma-separated for Lighthouse, with Infura as failover,
+# Consensus client address. This could be comma-separated for Lighthouse, with failover,
 # or could just be a remote consensus client URL for Teku, Lighthouse or Prysm "validator only" setups. Not in use for Nimbus.
 CL_NODE=http://consensus:5052
+
+# Some clients suggest adjusting to higher (or lower) peer count. Adjust here, per client
+# Nimbus peer count should not be set below 70
+CL_PEER_COUNT=
 
 # Beaconcha.in API key for sending client stats. Used with lh-stats.yml or prysm-stats.yml,
 # source build only for Prysm as of Sept 2021.
