--- a/teku-base.yml
+++ b/teku-base.yml
@@ -42,7 +42,7 @@ services:
       - --eth1-endpoints=${EL_NODE:-http://execution:8545}
       - --eth1-deposit-contract-max-request-size=150
       - --p2p-port=${CL_P2P_PORT:-9000}
-      - --p2p-peer-upper-bound=${TEKU_PEER_COUNT}
+      - --p2p-peer-upper-bound=${CL_PEER_COUNT:-100}
       - --validators-keystore-locking-enabled=true
       - --validator-keys=/var/lib/teku/validator-keys:/var/lib/teku/validator-passwords
       - --validators-graffiti=${GRAFFITI}
