--- a/lh-validator.yml
+++ b/lh-validator.yml
@@ -16,7 +16,7 @@ services:
       args:
         - BUILD_TARGET=${LH_SRC_BUILD_TARGET}
         - DOCKER_TAG=${LH_DOCKER_TAG}
-    image: lighthouse:local
+    image: lighthouse:merge
     user: lhvalidator
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
@@ -64,7 +64,7 @@ services:
         echo
   validator-import:
     restart: "no"
-    image: lighthouse:local
+    image: lighthouse:merge
     user: root
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
@@ -88,7 +88,7 @@ services:
       - --debug-level=${LOG_LEVEL}
   validator-exit:
     restart: "no"
-    image: lighthouse:local
+    image: lighthouse:merge
     user: root
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
@@ -110,7 +110,7 @@ services:
       - --keystore
   validator-account:
     restart: "no"
-    image: lighthouse:local
+    image: lighthouse:merge
     user: lhvalidator
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
@@ -127,7 +127,7 @@ services:
       - --debug-level=${LOG_LEVEL}
   validator-list:
     restart: "no"
-    image: lighthouse:local
+    image: lighthouse:merge
     user: lhvalidator
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
