--- a/teku-base.yml
+++ b/teku-base.yml
@@ -16,7 +16,7 @@ services:
         - BUILD_TARGET=${TEKU_SRC_BUILD_TARGET}
         - DOCKER_TAG=${TEKU_DOCKER_TAG}
       dockerfile: ${TEKU_DOCKERFILE}
-    image: teku:local
+    image: teku:merge
     user: teku
     stop_grace_period: 1m
     volumes:
@@ -81,7 +81,7 @@ services:
         echo
   validator-import:
     restart: "no"
-    image: teku:local
+    image: teku:merge
     user: root
     volumes:
       - teku-data:/var/lib/teku
@@ -92,7 +92,7 @@ services:
     entrypoint: validator-import.sh
   validator-exit:
     restart: "no"
-    image: teku:local
+    image: teku:merge
     user: teku
     volumes:
       - teku-data:/var/lib/teku
@@ -104,7 +104,7 @@ services:
       - --validator-keys=/var/lib/teku/validator-keys:/var/lib/teku/validator-passwords
   validator-list:
     restart: "no"
-    image: teku:local
+    image: teku:merge
     user: teku
     volumes:
       - teku-data:/var/lib/teku
