--- a/geth.yml
+++ b/geth.yml
@@ -17,7 +17,7 @@ services:
         - BUILD_TARGET=${GETH_SRC_BUILD_TARGET}
         - DOCKER_TAG=${GETH_DOCKER_TAG}
     stop_grace_period: 3m
-    image: geth:local
+    image: geth:merge
 # Root so a chown can happen for the secret, then su-exec into geth. This can become geth again
 # after merge
     user: root
