--- a/nimbus-base.yml
+++ b/nimbus-base.yml
@@ -16,7 +16,7 @@ services:
         - BUILD_TARGET=${NIM_SRC_BUILD_TARGET}
         - DOCKER_TAG=${NIM_DOCKER_TAG}
       dockerfile: ${NIM_DOCKERFILE}
-    image: nimbus:local
+    image: nimbus:merge
     user: user
     stop_grace_period: 1m
     volumes:
@@ -79,7 +79,7 @@ services:
         cat /var/lib/nimbus/api-token.txt
   validator-import:
     restart: "no"
-    image: nimbus:local
+    image: nimbus:merge
     user: root
     volumes:
       - nimbus-data:/var/lib/nimbus
@@ -97,7 +97,7 @@ services:
       - /val_keys
   validator-exit:
     restart: "no"
-    image: nimbus:local
+    image: nimbus:merge
     user: user
     volumes:
       - nimbus-data:/var/lib/nimbus
@@ -113,7 +113,7 @@ services:
       - --validator=
   validator-list:
     restart: "no"
-    image: nimbus:local
+    image: nimbus:merge
     user: user
     volumes:
       - nimbus-data:/var/lib/nimbus
