--- a/default.env
+++ b/default.env
@@ -40,8 +40,14 @@ DDNS_PROXY=true
 CL_NODE=http://consensus:5052
 
 # Some clients suggest adjusting to higher (or lower) peer count. Adjust here, per client
-# Nimbus peer count should not be set below 70
-CL_PEER_COUNT=
+# Nimbus peer count should not be set below 70. CL_MIN_PEER_COUNT is used for Teku,
+# and in Lodestar it is, sneakily, the target count, not the minimum
+CL_MAX_PEER_COUNT=
+CL_MIN_PEER_COUNT=
+# Ditto for EL, currently only in use for Besu. EL_MIN_PEER_COUNT for Besu is minimum
+# peers before fast sync starts
+EL_MAX_PEER_COUNT=
+EL_MIN_PEER_COUNT=
 
 # Beaconcha.in API key for sending client stats. Used with lh-stats.yml or prysm-stats.yml,
 # source build only for Prysm as of Sept 2021.
