--- a/lh-base.yml
+++ b/lh-base.yml
@@ -91,8 +91,7 @@ services:
       - ${KEY_API_PORT:-7500}
       - --http-address
       - 0.0.0.0
-      - --http-allow-origin
-      - "*"
+      - --http-allow-origin=*
       - --unencrypted-http-transport
       - --suggested-fee-recipient
       - ${REWARDS_TO}
