--- a/lh-validator.yml
+++ b/lh-validator.yml
@@ -44,8 +44,7 @@ services:
       - ${KEY_API_PORT:-7500}
       - --http-address
       - 0.0.0.0
-      - --http-allow-origin
-      - "*"
+      - --http-allow-origin=*
       - --unencrypted-http-transport
       - --suggested-fee-recipient
       - ${REWARDS_TO}
