Moved Erigon to devel tag for Ropsten

--- a/default.env
+++ b/default.env
@@ -122,7 +122,7 @@ LS_DOCKERFILE=Dockerfile.binary
 
 # Erigon
 ERIGON_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-ERIGON_DOCKER_TAG=alpha
+ERIGON_DOCKER_TAG=devel
 ERIGON_DOCKERFILE=Dockerfile.binary
 
 #Akula
