Add MEV Boost support

--- a/default.env
+++ b/default.env
@@ -5,6 +5,11 @@ REWARDS_TO=
 # Override TTD - may be required during testnet launch. This value is for Ropsten
 # If left empty, the client's built-in TTD is used
 OVERRIDE_TTD=50000000000000000
+# Decide whether to connect the CL to Flashbots MEV boost. Set MEV_BOOST to "true" for MEV
+# boost, or any other value including empty for not using MEV boost.
+# If "true" it also requires mev-boost.yml in COMPOSE_FILE
+MEV_BOOST=false
+MEV_RELAYS=
 # Authenticated execution client endpoint. This default uses the execution node container.
 # This needs to be ws:// or ws:// if using Nimbus, e.g. ws://execution:8551
 EL_NODE=http://execution:8551
@@ -95,6 +100,11 @@ JWT_SECRET=
 # SSV
 SSV_NODE_TAG=latest
 
+# MEV-Boost
+MEV_SRC_BUILD_TARGET=master
+MEV_DOCKER_TAG=latest
+MEV_DOCKERFILE=Dockerfile.binary
+
 # Nimbus
 NIM_SRC_BUILD_TARGET=stable
 NIM_DOCKER_TAG=multiarch-latest
@@ -106,6 +116,7 @@ TEKU_DOCKER_TAG=latest
 TEKU_DOCKERFILE=Dockerfile.binary
 
 # Lighthouse
+# SRC build target can be a tag, a branch, or a pr as "pr-ID"
 LH_SRC_BUILD_TARGET=unstable
 LH_DOCKER_TAG=latest-unstable-modern
 LH_DOCKERFILE=Dockerfile.binary
