Clarify Erigon WS port

--- a/default.env
+++ b/default.env
@@ -67,9 +67,10 @@ KEY_API_PORT=7500
 # Secure web proxy port, 443 and 80 are great defaults
 TRAEFIK_WEB_PORT=443
 TRAEFIK_WEB_HTTP_PORT=80
-# Execution client RPC port, important when using ec-shared.yml. Also insecure, do not expose to Internet.
+# Execution client RPC port, important when using ec-shared.yml. Insecure, do not expose to Internet.
 EL_RPC_PORT=8545
-# Execution client WS port, used with Nimbus. Ditto insecure, do not expose to Internet.
+# Execution client WS port. Insecure, do not expose to Internet.
+# Note that for Erigon, this needs to match EL_RPC_PORT
 EL_WS_PORT=8546
 # Erigon's torrent port. Don't make this 42070, that'll fail
 ERIGON_TORRENT_PORT=42069
