--- a/lodestar-base.yml
+++ b/lodestar-base.yml
@@ -85,7 +85,7 @@ services:
     user: root
     volumes:
       - lsvalidator-data:/var/lib/lodestar/validators
-      - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
+      - ./.eth/validator_keys:/validator_keys
       - /etc/localtime:/etc/localtime:ro
     environment:
       - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
