--- a/prysm-base.yml
+++ b/prysm-base.yml
@@ -166,7 +166,7 @@ services:
     user: root
     volumes:
       - prysmvalidator-data:/var/lib/prysm
-      - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
+      - ./.eth/validator_keys:/validator_keys
       - /etc/localtime:/etc/localtime:ro
     environment:
       - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
