--- a/teku-base.yml
+++ b/teku-base.yml
@@ -82,7 +82,7 @@ services:
     user: root
     volumes:
       - teku-data:/var/lib/teku
-      - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
+      - ./.eth/validator_keys:/validator_keys
       - /etc/localtime:/etc/localtime:ro
     environment:
       - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
