Change SSV node default ports

--- a/default.env
+++ b/default.env
@@ -72,9 +72,9 @@ TRAEFIK_WEB_HTTP_PORT=80
 EL_RPC_PORT=8545
 # Execution client WS port, used with Nimbus. Ditto insecure, do not expose to Internet.
 EL_WS_PORT=8546
-# SSV Node ports - note these conflict with Prysm by default
-SSV_P2P_PORT=13000
-SSV_P2P_PORT_UDP=12000
+# SSV Node ports
+SSV_P2P_PORT=13001
+SSV_P2P_PORT_UDP=12001
 
 # Geth cache size. This matters for low-memory machines such as RasPi 4, where
 # you may want to set it to 256. Geth will use the default if this is left blank.
@@ -89,7 +89,7 @@ LOG_LEVEL=info
 # You can set specific version targets and choose
 # binary or compiled from source builds below,
 # via `Dockerfile.binary` or `Dockerfile.source`
-# These settings are not migrated when running `./ethd update`
+# These settings are only migrated when running `./ethd update --keep-targets`
 
 # SSV
 SSV_NODE_TAG=latest
