--- a/default.env
+++ b/default.env
@@ -9,7 +9,7 @@ OVERRIDE_TTD=50000000000000000
 # boost, or any other value including empty for not using MEV boost.
 # If "true" it also requires mev-boost.yml in COMPOSE_FILE
 MEV_BOOST=false
-MEV_RELAYS=
+MEV_RELAYS=https://builder-relay-ropsten.flashbots.net/
 # Authenticated execution client endpoint. This default uses the execution node container.
 # This needs to be ws:// or ws:// if using Nimbus, e.g. ws://execution:8551
 EL_NODE=http://execution:8551
