Switch Nimbus to source build and unstable

--- a/default.env
+++ b/default.env
@@ -106,9 +106,9 @@ MEV_DOCKER_TAG=latest
 MEV_DOCKERFILE=Dockerfile.binary
 
 # Nimbus
-NIM_SRC_BUILD_TARGET=stable
+NIM_SRC_BUILD_TARGET=unstable
 NIM_DOCKER_TAG=multiarch-latest
-NIM_DOCKERFILE=Dockerfile.binary
+NIM_DOCKERFILE=Dockerfile.source
 
 # Teku
 TEKU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
