Add Teku MEV Boost support

--- a/default.env
+++ b/default.env
@@ -111,7 +111,7 @@ NIM_DOCKER_TAG=multiarch-latest
 NIM_DOCKERFILE=Dockerfile.source
 
 # Teku
-TEKU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+TEKU_SRC_BUILD_TARGET=master
 TEKU_DOCKER_TAG=latest
 TEKU_DOCKERFILE=Dockerfile.binary
 
