Add MEV Boost branch for Lodestar

--- a/default.env
+++ b/default.env
@@ -127,7 +127,8 @@ PRYSM_DOCKER_TAG=latest
 PRYSM_DOCKERFILE=Dockerfile.binary
 
 # Lodestar
-LS_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+# SRC build target can be a tag, a branch, or a pr as "pr-ID"
+LS_SRC_BUILD_TARGET=pr-3969
 LS_DOCKER_TAG=next
 LS_DOCKERFILE=Dockerfile.binary
 
