--- a/lodestar/Dockerfile.source
+++ b/lodestar/Dockerfile.source
@@ -10,15 +10,15 @@ RUN ln -s /usr/bin/python3 /usr/bin/python
 
 WORKDIR /usr/app
 
-RUN bash -c "git clone https://github.com/ChainSafe/lodestar.git && cd lodestar && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET} && yarn install --non-interactive --frozen-lockfile && yarn build && cd packages && npm install && npm install ./cli"
+RUN bash -c "cd .. && rm -rf app && git clone https://github.com/ChainSafe/lodestar.git app && cd app && git config advice.detachedHead false && git fetch --all --tags && if [[ ${BUILD_TARGET} =~ pr-.+ ]]; then git fetch origin pull/$(echo ${BUILD_TARGET} | cut -d '-' -f 2)/head:ls-pr; git checkout ls-pr; else git checkout ${BUILD_TARGET}; fi && yarn install --non-interactive --frozen-lockfile && yarn build"
 
 FROM node:16-alpine
 
 RUN apk update && apk add --no-cache ca-certificates tzdata bash su-exec && rm -rf /var/cache/apk/*
 
 WORKDIR /usr/app
-COPY --from=build /usr/app/lodestar/node_modules ./node_modules/
-COPY --from=build /usr/app/lodestar/packages ./packages
+COPY --from=build /usr/app .
+RUN ln -s ../../packages/cli/lib/index.js node_modules/.bin/lodestar
 
 
 # Scripts
