--- a/lh-consensus.yml
+++ b/lh-consensus.yml
@@ -49,7 +49,7 @@ services:
       - --port
       - ${CL_P2P_PORT:-9000}
       - --target-peers
-      - ${LH_PEER_COUNT}
+      - ${CL_MAX_PEER_COUNT:-80}
       - --eth1-endpoints
       - ${EL_NODE}
       - --eth1-blocks-per-log-query
