Allow user to override nag screen

--- a/default.env
+++ b/default.env
@@ -86,6 +86,10 @@ RESTART=unless-stopped
 # If you want debug logs, set this to debug instead of info
 LOG_LEVEL=info
 
+# If you run a distributed setup, setting this to DISTRIBUTED=true
+# will stop the nag screens during ./ethd update
+DISTRIBUTED=
+
 # You can set specific version targets and choose
 # binary or compiled from source builds below,
 # via `Dockerfile.binary` or `Dockerfile.source`
