ethd update now changes EL_NODE if it has a pre-merge value

--- a/default.env
+++ b/default.env
@@ -7,11 +7,9 @@ REWARDS_TO=
 OVERRIDE_TTD=50000000000000000
 # Decide whether to connect the CL to Flashbots MEV boost. Set MEV_BOOST to "true" for MEV
 # boost, or any other value including empty for not using MEV boost.
-# If "true" it also requires mev-boost.yml in COMPOSE_FILE
+# If "true" it also requires :mev-boost.yml in COMPOSE_FILE
 MEV_BOOST=false
 MEV_RELAYS=https://builder-relay-ropsten.flashbots.net/
-# Authenticated execution client endpoint. This default uses the execution node container.
-EL_NODE=http://execution:8551
 # Graffiti to use for validator
 GRAFFITI=eth-docker
 # Merged network to use. If using main net, set to mainnet.
@@ -35,10 +33,6 @@ EL_HOST=el
 EL_WS_HOST=elws
 DDNS_SUBDOMAIN=
 DDNS_PROXY=true
-
-# Consensus client address. This could be comma-separated for Lighthouse, with failover,
-# or could just be a remote consensus client URL for Teku, Lighthouse or Prysm "validator only" setups. Not in use for Nimbus.
-CL_NODE=http://consensus:5052
 
 # Some clients suggest adjusting to higher (or lower) peer count. Adjust here, per client
 # Nimbus peer count should not be set below 70. CL_MIN_PEER_COUNT is used for Teku,
@@ -97,6 +91,11 @@ JWT_SECRET=
 # If you run a distributed setup, setting this to DISTRIBUTED=true
 # will stop the nag screens during ./ethd update
 DISTRIBUTED=
+# Authenticated execution client endpoint. This default uses the execution node container.
+EL_NODE=http://execution:8551
+# Consensus client address. This could be comma-separated for Lighthouse, with failover,
+# or could just be a remote consensus client URL for Teku, Lighthouse or Prysm "validator only" setups. Not in use for Nimbus.
+CL_NODE=http://consensus:5052
 
 # You can set specific version targets and choose
 # binary or compiled from source builds below,
