--- a/erigon.yml
+++ b/erigon.yml
@@ -24,6 +24,7 @@ services:
     environment:
       - JWT_SECRET=${JWT_SECRET}
       - OVERRIDE_TTD=${OVERRIDE_TTD}
+      - LOG_LEVEL=${LOG_LEVEL}
     volumes:
       - erigon-ec-data:/var/lib/erigon
       - /etc/localtime:/etc/localtime:ro
