--- a/default.env
+++ b/default.env
@@ -1,7 +1,7 @@
 # Client choice: See https://eth-docker.net/docs/Usage/ClientSetup for available options
 COMPOSE_FILE=teku-base.yml:besu.yml
 # Set the ETH address that priority fees and MEV rewards should be sent to
-REWARDS_TO=
+FEE_RECIPIENT=
 # Execution client endpoint / chain source. This default uses the execution node container.
 # For Teku and Lighthouse, you can specify multiple endpoints separated by commas
 # This needs to be ws:// or ws:// if using Nimbus, e.g. ws://execution:8546
